syntax = "proto3";
package pt.ulisboa.tecnico.classes.contract.professor;

import "ClassesDefinitions.proto";

// Professor -> ClassServer Service

message OpenEnrollmentsRequest {
  int32 capacity = 1;
  map<string, int32> timestamps = 2;
}

message OpenEnrollmentsResponse {
  ResponseCode code = 1;
}

message CloseEnrollmentsRequest {
  map<string, int32> timestamps = 1;
}

message CloseEnrollmentsResponse {
  ResponseCode code = 1;
}

message CancelEnrollmentRequest {
  string studentId = 1;
  map<string, int32> timestamps = 2;
}

message CancelEnrollmentResponse {
  ResponseCode code = 1;
}

message ListClassRequest {
  map<string, int32> timestamps = 1;
}

message ListClassResponse {
  ResponseCode code = 1;
  ClassState classState = 2;
  map<string, int32> timestamps = 3;
}

service ProfessorService {
  rpc openEnrollments(OpenEnrollmentsRequest) returns (OpenEnrollmentsResponse);
  rpc closeEnrollments(CloseEnrollmentsRequest) returns (CloseEnrollmentsResponse);
  rpc listClass(ListClassRequest) returns (ListClassResponse);
  rpc cancelEnrollment(CancelEnrollmentRequest) returns (CancelEnrollmentResponse);
}
